[package]
name = "itemcf"
version = "1.0.0"
authors = ["tushushu"]
edition = "2018"

[dependencies]
pyo3 = "0.16.4"
ordered-float = "3.0.0"

[lib]
name = "itemcf"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
